# pdj-sitegen

./: .build_time  .gitignore  README.md  config.yaml  makefile  pyproject.toml
.github/: requirements-all.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt
.github/workflows/: checks.yml
.meta/changelogs/: changelog-0.0.6.txt
.meta/local/: .commit_log
.meta/requirements/: requirements-all.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt
content/: test.md
docs/: index.html  pdj_sitegen.html  search.js  todo-inline-standard.md  todo-inline-table.md
docs/combined/: pdj_sitegen.html  pdj_sitegen.md  pdj_sitegen.txt  pdj_sitegen_gfm.md
docs/coverage/: coverage.txt
docs/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_008f37aefb4e6654___init___py.html  z_008f37aefb4e6654___main___py.html  z_008f37aefb4e6654_build_py.html  z_008f37aefb4e6654_config_py.html  z_008f37aefb4e6654_consts_py.html  z_008f37aefb4e6654_error_report_py.html  z_008f37aefb4e6654_exceptions_py.html  z_008f37aefb4e6654_install_pandoc_py.html  z_008f37aefb4e6654_setup_site_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_build_excepts_py.html  z_a44f0ac069e85531_test_config_py.html  z_a44f0ac069e85531_test_consts_py.html  z_a44f0ac069e85531_test_error_report_py.html  z_a44f0ac069e85531_test_filters_csv_code_table_py.html  z_a44f0ac069e85531_test_filters_links_md2html_py.html  z_a44f0ac069e85531_test_index_normalization_py.html  z_a44f0ac069e85531_test_pdj_sitegen_py.html  z_a44f0ac069e85531_test_setup_py.html  z_d670c506a9c2116c___init___py.html  z_d670c506a9c2116c_csv_code_table_py.html  z_d670c506a9c2116c_links_md2html_py.html  z_f19184773f9481ff___init___py.html  z_f19184773f9481ff_csv_code_table_py.html  z_f19184773f9481ff_links_md2html_py.html
docs/demo_site/: about.html  blog.html  blog.post-1.html  blog.post-2.html  blog.post-3.html  events.html  faq.html  index.html  projects.html  projects.project-alpha.html  projects.project-beta.html  team.html
docs/demo_site/resources/data/: sample.csv
docs/pdj_sitegen/: build.html  config.html  consts.html  error_report.html  exceptions.html  filters.html  install_pandoc.html  setup_site.html
docs/pdj_sitegen/filters/: csv_code_table.html  links_md2html.html
docs/resources/: make_docs.py
pdj_sitegen/: __main__.py  build.py  config.py  consts.py  error_report.py  exceptions.py  install_pandoc.py  setup.py  setup_site.py
pdj_sitegen/data/: config.toml  config.yml  index.md
pdj_sitegen/filters/: __init__.py  csv_code_table.py  links_md2html.py
site_src/: .build_time  config.yml
site_src/content/: about.md  blog.md  blog.post-1.md  blog.post-2.md  blog.post-3.md  events.md  faq.md  index.md  projects.md  projects.project-alpha.md  projects.project-beta.md  team.md
site_src/content/resources/: default.css
site_src/content/resources/images/: placeholder.txt
site_src/templates/: about.html.jinja2  custom.html.jinja2  default.html.jinja2
templates/: default.html.jinja2
tests/: conftest.py  test_build_excepts.py  test_config.py  test_consts.py  test_error_report.py  test_filters_csv_code_table.py  test_filters_links_md2html.py  test_index_normalization.py  test_pdj_sitegen.py  test_setup.py
