[project]
name = "pdj_sitegen"
version = "0.0.4"
description = "static site generator built on pandoc + jinja2"
authors = [
	{ name = "Michael Ivanitskiy", email = "mivanits@umich.edu" }
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Typing :: Typed",
]

dependencies = [
	# basic utils
	"muutils>=0.8.12",
	# templating
	"Jinja2>=3.1.4",
	# yaml
	"PyYAML>=6.0.2",
	# pandoc
	"pypandoc>=1.14",
	"pandocfilters>=1.5.1",
	# progress bar
	"tqdm>=4.66.5",
	# pretty printing html
	"beautifulsoup4>=4.12.3",
]
[dependency-groups]
dev = [
	"twine",
	# lint
	"pycln>=2.1.3",
	"ruff>=0.4.8",
	# test
	"pytest>=8.2.2",
	# coverage
	"pytest-cov>=4.1.0",
	"coverage-badge>=1.1.0",
	# type checking
	"mypy>=1.0.1",
	"ty>=0.0.12",
	"basedpyright",
	# docs
	'pdoc>=14.6.0',
]

[project.urls]
Repository = "https://github.com/mivanit/pdj-sitegen"
Issues = "https://github.com/mivanit/pdj-sitegen/issues"
Documentation = "https://miv.name/pdj-sitegen/"

[project.scripts]
pdj-sitegen = "pdj_sitegen.build:main"
pdj-csv-code-table = "pdj_sitegen.filters.csv_code_table:main"
pdj-links-md2html = "pdj_sitegen.filters.links_md2html:main"

# build system
[build-system]
requires = ["hatchling>=1.21,<1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdj_sitegen"]

[tool.hatch.build.targets.sdist]
include = [
    "/pdj_sitegen",
]

# ruff config
[tool.ruff]
exclude = ["__pycache__"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.basedpyright]
include = ["pdj_sitegen", "tests"]
exclude = ["__pycache__", ".venv", "docs"]
reportConstantRedefinition = false
reportDeprecated = false
reportUnsupportedDunderAll = false
reportExplicitAny = false
# Suppress warnings for untyped libraries (pypandoc, bs4, pandocfilters)
reportMissingTypeStubs = false
# Suppress warnings for Any types from untyped libs
reportAny = false
# Suppress warnings for unused call results (f.write(), add_argument(), etc.)
reportUnusedCallResult = false
# Suppress warnings for unknown types from untyped libs
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Don't require @override decorators
reportImplicitOverride = false
# Allow function calls in default parameter values
reportCallInDefaultInitializer = false
# Suppress warnings for unreachable match fallback cases (defensive coding)
reportUnnecessaryComparison = false
# Suppress warnings for defensive isinstance checks
reportUnnecessaryIsInstance = false
reportUnreachable = false
# Suppress warnings for unused parameters/variables (common in callbacks)
reportUnusedParameter = false
reportUnusedVariable = false
# Allow importing re-exported symbols
reportPrivateLocalImportUsage = false

[tool.ty.src]
exclude = ["__pycache__/", ".venv/", "docs/"]

[tool.ty.rules]
unused-ignore-comment = "ignore"

[tool.mypy]
exclude = ["__pycache__", ".venv"]
show_error_codes = true
check_untyped_defs = true

