[project]
name = "pdj_sitegen"
version = "0.0.7"
description = "static site generator built on pandoc + jinja2"
authors = [
	{ name = "Michael Ivanitskiy", email = "mivanits@umich.edu" }
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Typing :: Typed",
]

dependencies = [
	# basic utils
	"muutils>=0.8.12",
	# templating
	"Jinja2>=3.1.4",
	# yaml
	"PyYAML>=6.0.2",
	# pandoc
	"pypandoc>=1.14",
	"pandocfilters>=1.5.1",
	# progress bar
	"tqdm>=4.66.5",
	# pretty printing html
	"beautifulsoup4>=4.12.3",
]
[dependency-groups]
dev = [
	"twine",
	# lint
	"pycln>=2.1.3",
	"ruff>=0.4.8",
	# test
	"pytest>=8.2.2",
	# coverage
	"pytest-cov>=4.1.0",
	# type checking
	"mypy>=1.0.1",
	"ty>=0.0.12",
	"basedpyright",
	# type stubs
	"types-PyYAML",
	"types-tqdm",
	"types-beautifulsoup4",
	# docs
	'pdoc>=14.6.0',
]

	[project.urls]
		Repository = "https://github.com/mivanit/pdj-sitegen"
		Issues = "https://github.com/mivanit/pdj-sitegen/issues"
		Documentation = "https://miv.name/pdj-sitegen/"

	[project.scripts]
		pdj-sitegen = "pdj_sitegen.build:main"
		pdj-csv-code-table = "pdj_sitegen.filters.csv_code_table:main"
		pdj-links-md2html = "pdj_sitegen.filters.links_md2html:main"

# build system
[build-system]
	requires = ["hatchling>=1.21,<1.26"]
	build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
	packages = ["pdj_sitegen"]

[tool.hatch.build.targets.sdist]
	include = [
		"/pdj_sitegen",
	]

# ruff config
[tool.ruff]
	exclude = ["__pycache__"]

	[tool.ruff.format]
		indent-style = "tab"
		skip-magic-trailing-comma = false

[tool.basedpyright]
	include = ["pdj_sitegen", "tests"]
	exclude = ["__pycache__", ".venv", "docs"]
	# Pervasive patterns - global suppress
	reportAny = false  # intentional Any for dynamic YAML/config data
	reportExplicitAny = false
	reportUnknownMemberType = false  # cascades from untyped libs
	reportUnknownParameterType = false
	reportUnknownVariableType = false
	reportUnknownArgumentType = false
	reportUnusedCallResult = false  # print(), write(), add_argument()
	# Defensive coding patterns
	reportUnnecessaryIsInstance = false
	reportUnnecessaryComparison = false
	reportUnreachable = false

[tool.ty.src]
	exclude = ["__pycache__/", ".venv/", "docs/"]

[tool.ty.rules]
	unused-type-ignore-comment = "ignore"

[tool.mypy]
	exclude = ["__pycache__", ".venv"]
	show_error_codes = true
	check_untyped_defs = true

[tool.makefile.uv-exports]
	args = [
		"--no-hashes"
	]
	exports = [
		# no groups, no extras, just the base dependencies
		{ name = "base", filename="requirements.txt", groups = false, extras = false },
		# all groups and extras
		{ name = "all", filename="requirements-dev.txt", groups = true, extras=true },
	]

